--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 	<title>El elefante se levantó a las siete</title>
 </head>
 <body>
-<h1>Desayunó</h1>
+<h1>Desayunó unas caguamas</h1>
 </body>
 </html>
